--- a/src/style.css
+++ b/src/style.css
@@ -255,6 +255,7 @@ a:focus {
 .main-heading {
   font-size: var(--fontSize-7);
   margin: 0;
+  font-weight: var(--fontWeight-black);
 }
 
 .post-list-item {
@@ -328,4 +329,14 @@ a:focus {
   ol {
     list-style-position: inside;
   }
+}
+
+@font-face {
+  font-family: MontserratVariable;
+  src: url('../static/montserrat-latin-variable-wghtOnly-normal.woff2');
+}
+
+@font-face {
+  font-family: Merriweather;
+  src: url('../static/merriweather-latin-400-normal.woff2');
 }
